# python-docker-images

./: Dockerfile  Dockerfile.freeze  Dockerfile.nuitka  Dockerfile.pyinstaller  Dockerfile.slim  LICENSE  Makefile  Procfile  README.md  main.py  mise.toml  pyproject.toml
.github/: copilot-instructions.md
