[tool.poetry]
name = "rest-app"
version = "0.1.0"
description = "Test REST app"
authors = ["Ids van der Molen <2285220+idsvandermolen@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
ujson = "^5.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
